fix bug 558543 return receipt notification bar shouldn't appear after the first time the user responds to the request, for local mail, r/sr=neil